funland/ntfy/ntfy/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ntfy
  namespace: ntfy
spec:
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https
  hostnames:
    - "ntfy.batlab.io"
  rules:
    - backendRefs:
        - name: ntfy
          port: 80
